Extra choices for matching people
